--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
             <version>1.7</version>
         </dependency>
         <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.34</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.tika</groupId>
             <artifactId>tika-parsers</artifactId>
             <version>1.7</version>
@@ -51,7 +57,6 @@
             <artifactId>primefaces</artifactId>
             <version>5.1</version>
         </dependency>
-
     </dependencies>
 
     <build>
